--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>2D Blocky v1.4</title>
     
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6610010715753217"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-7114819250649426~1728795159"
          crossorigin="anonymous"></script>
     
     <style>
